--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+  <h1>Demo App for GET Wayanad </h1>
 <a href="ttt.html"> <img src="tictactoe.png" width="360" height="600" /> </a>
 </body>
 </html>
